Añadida la documentación para la frase random
